Fixed responsive cards so it should render properly on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -65,12 +65,12 @@ body {
 .page-head {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
     padding: 6.0vw 0 5vw 0;
     max-width: 70%;
     margin: auto;
-    text-align: center;
+    text-align: left;
 }
 
 .error-head {
@@ -762,7 +762,7 @@ body {
 
 .main-page-content-container {
     display: grid;
-    grid-template-columns: minmax(200px, 30%) 70%;
+    grid-template-columns: minmax(200px, 1fr) 2fr;
     column-gap:15px;
 }
 
@@ -775,7 +775,22 @@ body {
     border-bottom: 2px solid #181818;
 }
 
-.main-page-feed {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    column-gap: 10px;
+.main-page-feed, .course-list-cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
 }
+
+.post-card {
+    min-width: 200px;
+    min-height:200px;
+    max-height: 300px;
+}
+
+@media (max-width: 768px) {
+    .main-page-content-container, .main-page-feed, .course-list-cards, .post-feed {
+        grid-template-columns: 1fr;
+    
+    }
+  
+   
+  }
